[tool.poetry]
name = "dsandalgorithms"
version = "0.1.0"
description = ""
authors = ["Josh Ajiniran <josuajiniran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
